fix visibility

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,18 @@
 /* styles.css */
 
+@font-face {
+  font-family:Orbitron-Bold;
+  src: url("./Orbitron/static/Orbitron-Bold.ttf");
+}
+@font-face {
+  font-family:Orbitron-Regular;
+  src: url("./Orbitron/static/Orbitron-Regular.ttf");
+}
+
 body, html {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    /*overflow: hidden;  Locks scroll for experimental transitions */
     background: black;
     color: white;
   }
@@ -32,6 +40,7 @@ body, html {
   #title {
     font-size: 3.5rem;
     animation: glitch 1.5s infinite;
+    font-family: Orbitron-Bold;
   }
   
   #subtitle {
@@ -60,6 +69,19 @@ body, html {
     width: 80%;
   }
   
+  .product:hover {
+    transform: scale(1.1);
+  }
+
+  h4, #subtitle {
+    font-family:Orbitron-Bold;
+    animation: glitch 1.5s infinite;
+  }
+
+  .cover p, #name {
+    font-family:Orbitron-Regular;
+  }
+  
   .product {
     width: 150px;
     cursor: pointer;
@@ -68,7 +90,6 @@ body, html {
   
   .product:hover {
     transform: scale(1.1);
-    filter: brightness(150%);
   }
   
   /* Background animations */
